Fixing the text contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ fieldset .article-header {
   height: 40px;
   font-size: 11px;
   padding-left: 1px;
-  color: rgba(255, 255, 255, 0.01); /* Make the text transparent because the actual text is in the 'content' of ::after */
+  color: white; /* Make the text transparent because the actual text is in the 'content' of ::after */
   background:rgba(0, 0, 0, 0.01);
   border: none;
 }
